widget/assets/css/style.css
/*
* Set height of body to auto for enabling scroll
*/

.body-scroll{
    height: auto !important;
}

.sticky-bottom-menu {
    position: absolute;
    width: 100%;
    height: 100%;
    overflow-y: auto;
}

.bottom-zero{
    bottom: 0px !important;
}

.holder .bottom .extra-links a.grid-layout{
	left:inherit;
	right:10px;
}
.holder.has-bottom.has-layout-bottom{
	padding-bottom:94px !important;
}

